# lib

./: Cargo.toml  README.md  runfile.toml
.cargo/: config.toml
auth/: README.md
auth/client/rs/: Cargo.toml  README.md
auth/client/rs/src/: api.rs  config.rs  event.rs  lib.rs  openapi.rs  passkey.rs  request.rs
auth/client/rs/src/api/: login.rs  manage.rs  mod.rs
auth/client/ts/: generate_types.mjs  package.json  runfile.toml  tsconfig.json
auth/client/ts/src/: lib.ts  passkey.ts  responses.ts  tokens.ts  types.ts
auth/server/: Cargo.toml  README.md
auth/server/src/: args.rs  ip.rs  jwt.rs  lib.rs  middleware.rs  rand.rs  session.rs  user.rs  validations.rs
auth/server/src/api/: local.rs  mod.rs  oidc.rs  openapi.rs  passkey.rs  totp.rs
auth/server/src/api/login/: local.rs  mod.rs  passkey.rs  totp.rs
auth/server/src/api/manage/: api_key.rs  external.rs  local.rs  middleware.rs  mod.rs  passkey.rs  totp.rs
auth/server/src/api/named/: github.rs  google.rs  mod.rs
auth/server/src/provider/: jwt.rs  mod.rs  oidc.rs  passkey.rs
auth/server/src/provider/named/: github.rs  google.rs  mod.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: interpolate.rs  lib.rs  load.rs
crates/encryption/: Cargo.toml  README.md
crates/encryption/src/: lib.rs  xchacha20poly1305.rs
crates/error/: Cargo.toml  README.md
crates/error/src/: axum.rs  lib.rs
crates/logger/: Cargo.toml  README.md
crates/logger/src/: config.rs  lib.rs  otel.rs
crates/pki/: Cargo.toml  README.md
crates/pki/src/: cli.rs  lib.rs  mutual.rs  one_way.rs
crates/pki/src/key/: mod.rs  private.rs  public.rs
crates/pki/src/kinds/: mod.rs  mutual.rs  one_way.rs
crates/rate_limit/: Cargo.toml
crates/rate_limit/src/: lib.rs
crates/request_ip/: Cargo.toml  README.md
crates/request_ip/src/: lib.rs
crates/resolver/: Cargo.toml  README.md
crates/resolver/derive/: Cargo.toml
crates/resolver/derive/src/: lib.rs
crates/resolver/src/: lib.rs
crates/secret_file/: Cargo.toml  README.md
crates/secret_file/src/: lib.rs  read.rs  write.rs
crates/serror/: Cargo.toml
crates/server/: Cargo.toml  README.md
crates/server/src/: cors.rs  lib.rs  session.rs  ui.rs
crates/validations/: Cargo.toml  README.md
crates/validations/src/: lib.rs
monaco/: package.json  runfile.toml  tsconfig.json  tsup.config.ts
monaco/src/: index.scss  index.tsx  init.ts
react/base/: README.md  package.json
react/base/src/: globals.css
react/components/data-table/: package.json
react/components/monaco-editor/: package.json
react/components/omni-search/: package.json
react/components/xterm/: package.json
react/components/xterm/src/: index.css
rs/config/: Cargo.toml  README.md
rs/config/src/: interpolate.rs
rs/logger/: Cargo.toml
rs/rate_limit/: README.md
rs/secret_file/: Cargo.toml  README.md
rs/serror/src/: lib.rs  serror.rs
solid/base/: README.md  package.json  tailwind.config.ts  tsconfig.json
solid/base/src/: index.css  lib.ts  theme.tsx
solid/base/src/components/: button.tsx  dropdown-menu.tsx
ui/: package.json  runfile.toml  tsup.config.ts
ui/src/: color.ts  formatting.ts  hooks.ts  index.scss  index.ts  theme.scss  theme.tsx  utils.ts  worker.d.ts
ui/src/auth/: index.ts  utils.ts
ui/src/auth/login/: header.tsx  index.tsx
ui/src/auth/profile/: index.ts  linked-logins.tsx  passkey.tsx  totp.tsx
ui/src/components/: back-button.tsx  button-link.tsx  confirm-button.tsx  confirm-icon.tsx  confirm-modal.tsx  copy-button.tsx  copy-text.tsx  create-modal.tsx  data-table.tsx  enable-switch.tsx  entity-header.tsx  entity-page.tsx  hover-error.tsx  info-card.tsx  input-list.tsx  labelled-switch.tsx  labels-group.tsx  loading-screen.tsx  mobile-friendly-tabs.tsx  page-guard.tsx  page.tsx  search-input.tsx  section.tsx  shared-text-update.tsx  show-hide-button.tsx  stat-bar.tsx  stat-cell.tsx  status-badge.tsx  tabbed-page.tsx  table-skeleton.tsx  text-update-modal.tsx  theme-toggle.tsx
ui/src/components/config/: confirm.tsx  group.tsx  index.tsx  item.tsx  layout.tsx  unsaved-changes.tsx
ui/src/components/divided-children/: index.tsx
ui/src/components/fancy-card/: index.tsx
ui/src/components/monaco/: init.ts
ui/src/components/monaco/syntax/: yaml.ts
