[workspace]
resolver = "2"
members = ["auth/client/rs", "auth/server", "crates/*", "crates/resolver/derive"]

[workspace.package]
edition = "2024"
authors = ["moghtech <contact@mogh.tech>"]
license = "MPL-2.0"
repository = "https://github.com/moghtech/lib"

[patch.crates-io]
# MOGH API
mogh_auth_client = { path = "auth/client/rs" }
mogh_auth_server = { path = "auth/server" }

# MOGH
mogh_cache = { path = "crates/cache" }
mogh_config = { path = "crates/config" }
mogh_encryption = { path = "crates/encryption" }
mogh_error = { path = "crates/error" }
mogh_logger = { path = "crates/logger" }
mogh_pki = { path = "crates/pki" }
mogh_rate_limit = { path = "crates/rate_limit" }
mogh_request_ip = { path = "crates/request_ip" }
mogh_resolver = { path = "crates/resolver" }
mogh_resolver_derive = { path = "crates/resolver/derive" }
mogh_secret_file = { path = "crates/secret_file" }
mogh_server = { path = "crates/server" }
mogh_validations = { path = "crates/validations" }

[workspace.dependencies]
# MOGH API
mogh_auth_client = "0.1.0"
mogh_auth_server = "0.1.0"

# MOGH
mogh_cache = "1.0.0"
mogh_config = "1.0.1"
mogh_encryption = "0.1.0"
mogh_error = "1.0.0"
mogh_logger = "1.0.0"
mogh_pki = "1.0.0"
mogh_rate_limit = "1.0.0"
mogh_request_ip = "1.0.0"
mogh_resolver = "1.0.0"
mogh_resolver_derive = "1.0.0"
mogh_secret_file = "1.0.0"
mogh_server = "1.0.0"
mogh_validations = "1.0.0"

# ASYNC
reqwest = { version = "0.13.1", default-features = false, features = ["json", "query", "form", "rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
arc-swap = "1.8.0"

# SERVER
tower-http = { version = "0.6.8", features = ["fs", "cors", "set-header"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum = { version = "0.8.8", features = ["macros"] }
tower-sessions = "0.14.0"
urlencoding = "2.1.3"

# SER/DE
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
serde_yaml_ng = "0.10.0"
serde_json = "1.0.149"
serde_qs = "0.15.0"
bson = "3.1.0"
toml = "0.9.11+spec-1.1.0"
url = "2.5.8"

# CRYPTO
chacha20poly1305 = "0.10.1"
data-encoding = "2.10.0"
rand = "0.9.2"

# AUTH
webauthn-rs = { version = "0.5.4", features = ["danger-allow-state-serialisation"] }
openidconnect = { version = "4.0.1", features = ["accept-rfc3339-timestamps"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
totp-rs = { version = "5.7.0", features = ["qr", "serde_support"] }
bcrypt = "0.18.0"

# PKI
pem-rfc7468 = { version = "1.0.0", features = ["alloc"] }
pkcs8 = "0.10.2"
snow = "0.10.0"
spki = "0.7.3"
der = "0.7.10"

# ERROR
anyhow = "1.0.100"
thiserror = "2.0.17"

# LOGGING
opentelemetry-otlp = { version = "0.31.0", features = ["tls-roots", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.22", features = ["json"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
tracing = "0.1.44"

# MACRO
quote = "1.0.43"
proc-macro2 = "1.0.105"
syn = "2.0.114"

# MISC
uuid = { version = "1.19.0", features = ["v4"] }
typeshare = "1.0.5"
wildcard = "0.3.0"
colored = "3.1.1"
utoipa = "5.4.0"
regex = "1.12.2"