[workspace]
resolver = "2"
members = ["auth/client/rs", "auth/server", "crates/*", "crates/resolver/derive"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/moghtech/lib"

[workspace.dependencies]
# MOGH API
mogh_auth_client = "1.7.0"
mogh_auth_server = "1.7.0"

# MOGH
mogh_cache = "1.1.2"
mogh_config = "1.0.5"
mogh_encryption = "0.1.1"
mogh_error = "1.0.4"
mogh_logger = "1.3.4"
mogh_pki = "1.1.3"
mogh_rate_limit = "1.0.1"
mogh_request_ip = "1.0.1"
mogh_resolver = "1.0.0"
mogh_resolver_derive = "1.0.0"
mogh_secret_file = "1.0.1"
mogh_server = "1.5.0"
mogh_validations = "1.0.1"

# CICADA
cicada_loader = "0.5.1"

# ASYNC
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "form", "rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
arc-swap = "1.9.2"

# SERVER
tower-http = { version = "0.7.0", features = ["fs", "cors", "set-header"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum = { version = "0.8.9", features = ["macros"] }
tower-sessions = "0.15.0"
urlencoding = "2.1.3"

# SER/DE
indexmap = { version = "2.14.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
serde_yaml_ng = "0.10.0"
serde_json = "1.0.150"
serde_qs = "1.0.0"
bson = "3.1.0"
toml = "1.1.2"
url = "2.5.8"

# CRYPTO
# Held back for 'snow'
chacha20poly1305 = "0.10.1"
data-encoding = "2.11.0"
rand = "0.10.1"
# Held back for 'openidconnect'
sha2 = "0.10.9"

# AUTH
webauthn-rs = { version = "0.5.5", features = ["danger-allow-state-serialisation"] }
openidconnect = { version = "4.0.1", features = ["accept-rfc3339-timestamps"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
totp-rs = { version = "5.7.2", features = ["qr", "serde_support"] }
bcrypt = "0.19.2"

# PKI
pem-rfc7468 = { version = "1.0.0", features = ["alloc"] }
# Held back for 'openidconnect'
pkcs8 = "0.10.2"
snow = "0.10.0"
# Held back for 'openidconnect'
spki = "0.7.3"
# Held back for 'openidconnect'
der = "0.7.10"

# ERROR
anyhow = "1.0.103"
thiserror = "2.0.18"

# LOGGING
opentelemetry-otlp = { version = "0.32.0", features = ["tls-roots", "reqwest-rustls"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3.23", features = ["json"] }
opentelemetry-semantic-conventions = "0.32.1"
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
tracing = "0.1.44"

# MACRO
quote = "1.0.46"
proc-macro2 = "1.0.106"
syn = "2.0.118"

# MISC
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.4", features = ["v4"] }
typeshare = "1.0.5"
wildcard = "0.3.0"
colored = "3.1.1"
utoipa = "5.5.0"
regex = "1.12.4"

[patch.crates-io]
# MOGH API
mogh_auth_client = { path = "auth/client/rs" }
mogh_auth_server = { path = "auth/server" }

# MOGH
mogh_cache = { path = "crates/cache" }
mogh_config = { path = "crates/config" }
mogh_encryption = { path = "crates/encryption" }
mogh_error = { path = "crates/error" }
mogh_logger = { path = "crates/logger" }
mogh_pki = { path = "crates/pki" }
mogh_rate_limit = { path = "crates/rate_limit" }
mogh_request_ip = { path = "crates/request_ip" }
mogh_resolver = { path = "crates/resolver" }
mogh_resolver_derive = { path = "crates/resolver/derive" }
mogh_secret_file = { path = "crates/secret_file" }
mogh_server = { path = "crates/server" }
mogh_validations = { path = "crates/validations" }