[package]
name = "mogh_auth_server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# LOCAL
mogh_auth_client = { workspace = true, features = ["utoipa"] }
mogh_error = { workspace = true, features = ["utoipa"] }
mogh_validations.workspace = true
mogh_request_ip.workspace = true
mogh_rate_limit.workspace = true
derive_variants.workspace = true
resolver_api.workspace = true
# EXTERNAL
tower-sessions.workspace = true
data-encoding.workspace = true
jsonwebtoken.workspace = true
webauthn-rs.workspace = true
serde_json.workspace = true
typeshare.workspace = true
tracing.workspace = true
totp-rs.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
utoipa.workspace = true
serde.workspace = true
rand.workspace = true
axum.workspace = true
uuid.workspace = true