[package]
name = "mogh_auth_server"
description = "Implements the Mogh Auth Server embedded API."
version = "1.2.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# LOCAL
mogh_auth_client = { workspace = true, features = ["utoipa"] }
mogh_error = { workspace = true, features = ["utoipa"] }
mogh_validations.workspace = true
mogh_request_ip.workspace = true
mogh_rate_limit.workspace = true
mogh_resolver.workspace = true
mogh_pki.workspace = true
# EXTERNAL
tower-sessions.workspace = true
data-encoding.workspace = true
openidconnect.workspace = true
jsonwebtoken.workspace = true
urlencoding.workspace = true
webauthn-rs.workspace = true
serde_json.workspace = true
typeshare.workspace = true
arc-swap.workspace = true
reqwest.workspace = true
tracing.workspace = true
totp-rs.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
utoipa.workspace = true
serde.workspace = true
strum.workspace = true
rand.workspace = true
axum.workspace = true
uuid.workspace = true