[package]
name = "mogh_encryption"
description = "Utilities to encrypt and decrypt data."
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chacha20poly1305.workspace = true
data-encoding.workspace = true
anyhow.workspace = true
rand.workspace = true