[package]
name = "mogh_error"
description = "De/serialize errors into json format with customizable http status code."
version = "1.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
axum = ["dep:axum"]
utoipa = ["dep:utoipa"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# axum feature
axum = { workspace = true, optional = true }
# utoipa feature
utoipa = { version = "5.4", optional = true }