[package]
name = "mogh_logger"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-subscriber.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
anyhow.workspace = true