[package]
name = "mogh_logger"
description = "Configurable application level logger using tracing."
version = "1.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-subscriber.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
anyhow.workspace = true