[package]
name = "mogh_rate_limit"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
# LOCAL
mogh_error = { workspace = true, features = ["axum"] }
mogh_cache.workspace = true
#
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true