[package]
name = "mogh_rate_limit"
description = "Utilities to rate limit fallible async calls."
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# LOCAL
mogh_error = { workspace = true, features = ["axum"] }
mogh_cache.workspace = true
#
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true