[package]
name = "mogh_request_ip"
description = "Axum extractor for client request IP"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# MOGH
mogh_error = { workspace = true, features = ["axum"] }
# EXTERNAL
anyhow.workspace = true
axum.workspace = true