[package]
name = "mogh_secret_file"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["read"]
read = []
write = []
tokio = ["dep:tokio"]

[dependencies]
tokio = { workspace = true, optional = true }
thiserror.workspace = true