[package]
name = "mogh_secret_file"
description = "Utilities for reading and writing secret files"
version = "1.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["read"]
read = []
write = []
tokio = ["dep:tokio"]

[dependencies]
tokio = { workspace = true, optional = true }
thiserror.workspace = true