[package]
name = "mogh_server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
tower-sessions.workspace = true
axum-server.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum.workspace = true
url.workspace = true