[package]
name = "mogh_server"
description = "Configurable axum server including TLS, Session, CORS, common security headers, and static file hosting."
version = "1.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tower-sessions.workspace = true
axum-server.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum.workspace = true
url.workspace = true