[package]
name = "mogh_server"
description = "Configurable axum server including TLS, Session, CORS, common security headers, and static file hosting."
version = "1.4.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tower-sessions.workspace = true
data-encoding.workspace = true
axum-server.workspace = true
tower-http.workspace = true
tracing.workspace = true
anyhow.workspace = true
axum.workspace = true
sha2.workspace = true
url.workspace = true