[package]
name = "mogh_validations"
description = "Utilities to validate incoming strings."
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# default = ["bson"]
bson = ["dep:bson"]

[dependencies]
bson = { workspace = true, optional = true }
anyhow.workspace = true
regex.workspace = true
url.workspace = true