[package]
name = "mogh_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing-subscriber.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry.workspace = true
tracing.workspace = true
anyhow.workspace = true