[package]
name = "mogh_auth_client"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
# default = ["blocking"]
blocking = ["reqwest/blocking"]
utoipa = ["dep:utoipa"]

[dependencies]
# MOGH
mogh_error = { workspace = true, features = ["axum"] }
mogh_resolver.workspace = true
# EXTERNAL
utoipa = { workspace = true, optional = true }
webauthn-rs.workspace = true
serde_json.workspace = true
typeshare.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
strum.workspace = true